@@ -1,3 +1,7 @@
+2008-05-22	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* init.c: Add shell configuration.
+
 2008-02-05	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* init.c: Now works.
